--- a/parts.css
+++ b/parts.css
@@ -2,6 +2,8 @@
 /* CSS Document */
 
 body {
+	font-family: YuGothic, "游ゴシック Medium", "游ゴシック体";
+
 	width: 100%;
 	margin: 0;
 }
@@ -12,10 +14,10 @@ body {
 }
 
 h2 {
-	font: Bold 24px/39px Yu Gothic;
+	font-size: 24px;
+	font-weight: bold;
 
 	margin-bottom: 40px;
-	padding: 10px;
 
 	text-align: left;
 	letter-spacing: 0;
@@ -25,18 +27,26 @@ h2 {
 }
 
 .heading01 {
+	padding: 10px 0;
+
 	border-bottom: solid 3px #3f51b5;
 }
 
 .heading02 {
+	padding: 10px 0;
+
 	border-bottom: dotted 3px #3f51b5;
 }
 .heading03 {
+	padding: 10px;
+
 	opacity: 1;
 	color: #fff;
 	background: #3f51b5 0% 0% no-repeat padding-box;
 }
 .heading04 {
+	padding: 10px;
+
 	opacity: 1;
 	color: #fff;
 	border-bottom: solid 3px #3f51b5;
@@ -44,5 +54,15 @@ h2 {
 }
 
 .heading05 {
+	padding: 10px;
+
 	border-left: solid 5px #3f51b5;
+}
+
+
+.heading06 {
+	width: 300px;
+	padding: 10px 0;
+
+	background: linear-gradient(transparent 50%, #dcee39 50%);
 }
